tests/ui/const-generics/mgca/tuple_expr_arg_mismatch_type.stderr
error: expected `u32`, found `()`
  --> $DIR/tuple_expr_arg_mismatch_type.rs:5:28
   |
LL |     takes_nested_tuple::<{ () }>
   |                            ^^

error: aborting due to 1 previous error

